--- a/index.html
+++ b/index.html
@@ -1,52 +1,113 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Full Stack Kurs</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kup kurs INF03</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <header class="site-header">
+    <div class="container">
+      <h1>Kurs INF03 — przygotowanie do egzaminu</h1>
+      <nav>
+        <button id="cartBtn" class="btn small">Koszyk (<span id="cartCount">0</span>)</button>
+      </nav>
+    </div>
+  </header>
 
-    <header>
-        <div class="logo">
-            <h1>Full Stack Kurs</h1>
+  <main class="container">
+    <section class="product">
+      <div class="product-image">
+        <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='400' height='250'><rect width='100%' height='100%' fill='%2386b7ff'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='24' fill='white'>Kurs INF03</text></svg>" alt="Kurs INF03" />
+      </div>
+      <div class="product-info">
+        <h2>Kurs: INF03 — Kompleksowe przygotowanie</h2>
+        <p>Materiał obejmuje teorię, zadania z rozwiązaniami, przykładowe arkusze i testy. Dostęp natychmiastowy po opłaceniu.</p>
+        <ul>
+          <li>czas trwania: 20 godzin materiału</li>
+          <li>format: wideo + PDF + zadania</li>
+          <li>poziom: podstawowy → zaawansowany</li>
+        </ul>
+        <div class="price">Cena: <strong>99 PLN</strong></div>
+        <div class="actions">
+          <button id="buyBtn" class="btn primary">Kup teraz</button>
+          <button id="addToCart" class="btn">Dodaj do koszyka</button>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Strona Główna</a></li>
-                <li><a href="#">Program Kursu</a></li>
-                <li><a href="#">O Kursie</a></li>
-                <li><a href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section class="hero">
-        <h2>Dołącz do naszego Full Stack Kursu!</h2>
-        <p>Rozwijaj swoje umiejętności webowe, ucząc się HTML, CSS, JavaScript, Node.js i wiele więcej!</p>
-        <a href="#" class="btn">Zapisz się teraz</a>
+      </div>
     </section>
 
-    <section class="content">
-        <div class="feature">
-            <h3>Frontend Development</h3>
-            <p>Dowiedz się, jak budować responsywne i interaktywne strony za pomocą HTML, CSS i JavaScript.</p>
-        </div>
-        <div class="feature">
-            <h3>Backend Development</h3>
-            <p>Opanuj tworzenie API i zarządzanie bazą danych przy użyciu Node.js i Express.js.</p>
-        </div>
-        <div class="feature">
-            <h3>Full Stack</h3>
-            <p>Połącz umiejętności frontendowe i backendowe, by stworzyć kompletne aplikacje internetowe.</p>
-        </div>
+    <section class="how">
+      <h3>Jak to działa?</h3>
+      <ol>
+        <li>Dodaj kurs do koszyka lub kliknij "Kup teraz".</li>
+        <li>Wypełnij formularz zamówienia i potwierdź płatność (symulacja).</li>
+        <li>Po sukcesie otrzymasz link do pobrania i potwierdzenie e‑mailem (symulacja).</li>
+      </ol>
     </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Full Stack Kurs | Wszystkie prawa zastrzeżone</p>
-    </footer>
+  <!-- Koszyk / Modal -->
+  <div id="cartModal" class="modal" aria-hidden="true">
+    <div class="modal-content">
+      <button class="close" id="closeCart">&times;</button>
+      <h2>Twój koszyk</h2>
+      <div id="cartItems"></div>
+      <div class="cart-footer">
+        <div class="total">Suma: <strong id="cartTotal">0 PLN</strong></div>
+        <button id="checkoutBtn" class="btn primary">Przejdź do zamówienia</button>
+      </div>
+    </div>
+  </div>
 
+  <!-- Formularz zamówienia -->
+  <div id="checkoutModal" class="modal" aria-hidden="true">
+    <div class="modal-content">
+      <button class="close" id="closeCheckout">&times;</button>
+      <h2>Formularz zamówienia</h2>
+      <form id="checkoutForm" novalidate>
+        <label>Imię i nazwisko
+          <input type="text" id="fullname" required minlength="2" />
+        </label>
+        <label>E‑mail
+          <input type="email" id="email" required />
+        </label>
+        <label>Adres (opcjonalnie)
+          <input type="text" id="address" />
+        </label>
+
+        <div class="payment-sim">
+          <p>Płatność (symulacja):</p>
+          <label><input type="radio" name="pay" value="card" checked /> Karta</label>
+          <label><input type="radio" name="pay" value="blik" /> BLIK</label>
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn primary">Zapłać 99 PLN</button>
+        </div>
+        <div id="formMsg" class="form-msg" role="status"></div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Potwierdzenie -->
+  <div id="successModal" class="modal" aria-hidden="true">
+    <div class="modal-content">
+      <h2>Dziękujemy za zakup!</h2>
+      <p id="successText">Płatność zakończona powodzeniem. Możesz pobrać kurs klikając poniżej:</p>
+      <a id="downloadLink" class="btn" download="Kurs-INF03.txt">Pobierz kurs (demo)</a>
+      <div style="margin-top:12px">
+        <button id="closeSuccess" class="btn">Zamknij</button>
+      </div>
+    </div>
+  </div>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>Demo sklepu — brak realnej obsługi płatności. W produkcji użyj Stripe/PayPal/Przelewy24.</small>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
